# bgcicca.github.io

./: .gitignore  .vercelignore  about.org  about.rst  bgcicca.cabal  contact.markdown  index.html  package.json  site.hs  stack.yaml  vercel.json
.vercel/: project.json
css/: default.css
docs/: about.html  archive.html  contact.html  index.html
docs/css/: default.css
docs/posts/: 2024-03-01.html  2024-11-04.html  2025-01-02.html  2025-01-28.html  2025-02-15.html  2025-02-20.html  2025-02-24.html  2025-02-27.html  2025-03-01.html  2025-03-02.html  2025-03-03.html  2025-03-04.html  25-02-06.html
docs/tags/: AI democratization.html  Deep Knowledge.html  DeepSeek.html  OpenAI.html  Over-engineering.html  Shallow Knowledge.html  a11y.html  accessibility.html  artificial intelligence.html  beginners.html  career tips.html  common lisp.html  computer science.html  desenvolvimento.html  design.html  dilma.html  direita.html  editor.html  elisp.html  emacs tutorial.html  emacs.html  faster.html  future.html  harmful stuff.html  history.html  inclusive design.html  job market.html  learning.html  lem-editor.html  lisp.html  lists.html  low level.html  lula.html  machine learning.html  neovim.html  open source.html  philosophy.html  politics.html  productivity.html  programming.html  (+6 more)
images/: archive.xcf
posts/: 2024-03-01.org  2024-11-04.markdown  2025-01-28.markdown  2025-02-15.org  2025-02-20.org  2025-02-24.org  2025-02-27.org  2025-03-01.org  2025-03-02.org  2025-03-03.org  2025-03-04.org  25-02-06.markdown
templates/: default.html  sidebar.html
(+1 files in other folders)
